--- a/Fitness-M/Fitness-M.csproj
+++ b/Fitness-M/Fitness-M.csproj
@@ -172,6 +172,12 @@
     <Compile Include="Представление\Сеанс\ArrivedAndDepartedEditFrom.Designer.cs">
       <DependentUpon>ArrivedAndDepartedEditFrom.cs</DependentUpon>
     </Compile>
+    <Compile Include="Представление\Сеанс\HistoryVisitsBrowseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Представление\Сеанс\HistoryVisitsBrowseForm.Designer.cs">
+      <DependentUpon>HistoryVisitsBrowseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Представление\Сеанс\PlanFormEdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -265,6 +271,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Представление\Сеанс\ArrivedAndDepartedEditFrom.resx">
       <DependentUpon>ArrivedAndDepartedEditFrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Представление\Сеанс\HistoryVisitsBrowseForm.resx">
+      <DependentUpon>HistoryVisitsBrowseForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Представление\Сеанс\PlanFormEdit.resx">
       <DependentUpon>PlanFormEdit.cs</DependentUpon>
