--- a/Fitness-M/Fitness-M.csproj
+++ b/Fitness-M/Fitness-M.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Модель_данных\Абонементы\Абонементы\Tickets.cs" />
     <Compile Include="Модель_данных\Абонементы\Виды_абонементов\KindTickets.cs" />
     <Compile Include="Модель_данных\Набор_данных\ClientDataSet.cs" />
+    <Compile Include="Представление\Абонемент\DateFinishChangeFormEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Представление\Абонемент\DateFinishChangeFormEdit.Designer.cs">
+      <DependentUpon>DateFinishChangeFormEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Представление\Абонемент\DebtFormEdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -239,6 +245,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Представление\Абонемент\DateFinishChangeFormEdit.resx">
+      <DependentUpon>DateFinishChangeFormEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Представление\Абонемент\DebtFormEdit.resx">
       <DependentUpon>DebtFormEdit.cs</DependentUpon>
     </EmbeddedResource>
